add register child actor

--- a/stats/index.html
+++ b/stats/index.html
@@ -14,7 +14,7 @@
       <hr />
 
       <h4>
-        {{len .ActorInfos}}
+        {{len .Actors}}
         Actors Running
       </h4>
 
@@ -27,7 +27,7 @@
           </tr>
         </thead>
         <tbody>
-          {{range .ActorInfos}}
+          {{range .Actors}}
             <tr>
               <td>
                 {{.Identifier}}
