refactor controller's actions handler

--- a/stats/index.html
+++ b/stats/index.html
@@ -24,6 +24,12 @@
             <th>
               Actor
             </th>
+            <th>
+              Root
+            </th>
+            <th>
+              CH
+            </th>
           </tr>
         </thead>
         <tbody>
@@ -31,6 +37,12 @@
             <tr>
               <td>
                 {{.Identifier}}
+              </td>
+              <td>
+                {{.Root}}
+              </td>
+              <td>
+                {{.Ch}}
               </td>
             </tr>
           {{end}}
