--- a/coverage.html
+++ b/coverage.html
@@ -1,47 +1,47 @@
 mode: set
-github.com/kooinam/fabio/actors/actions_handler.go:12.43,18.2 2 1
-github.com/kooinam/fabio/actors/actions_handler.go:21.81,23.2 1 1
-github.com/kooinam/fabio/actors/actions_handler.go:25.57,28.19 2 1
-github.com/kooinam/fabio/actors/actions_handler.go:28.19,32.17 3 1
-github.com/kooinam/fabio/actors/actions_handler.go:32.17,34.4 1 0
-github.com/kooinam/fabio/actors/actions_handler.go:34.9,36.4 1 1
-github.com/kooinam/fabio/actors/actions_handler.go:37.8,39.3 1 1
-github.com/kooinam/fabio/actors/actor.go:15.52,27.2 4 1
-github.com/kooinam/fabio/actors/actor.go:30.41,32.2 1 1
-github.com/kooinam/fabio/actors/actor.go:34.29,35.12 1 1
-github.com/kooinam/fabio/actors/actor.go:35.12,36.31 1 1
-github.com/kooinam/fabio/actors/actor.go:36.31,38.4 1 1
-github.com/kooinam/fabio/actors/context.go:16.45,22.2 2 1
-github.com/kooinam/fabio/actors/context.go:25.54,28.18 2 0
-github.com/kooinam/fabio/actors/context.go:32.2,32.33 1 0
-github.com/kooinam/fabio/actors/context.go:28.18,30.3 1 0
-github.com/kooinam/fabio/actors/context.go:36.56,40.2 2 0
-github.com/kooinam/fabio/actors/context.go:43.65,46.18 2 0
-github.com/kooinam/fabio/actors/context.go:50.2,50.22 1 0
-github.com/kooinam/fabio/actors/context.go:63.2,63.20 1 0
-github.com/kooinam/fabio/actors/context.go:46.18,48.3 1 0
-github.com/kooinam/fabio/actors/context.go:51.14,54.17 2 0
-github.com/kooinam/fabio/actors/context.go:58.3,58.11 1 0
-github.com/kooinam/fabio/actors/context.go:59.15,60.30 1 0
-github.com/kooinam/fabio/actors/context.go:54.17,56.4 1 0
-github.com/kooinam/fabio/actors/event.go:10.93,18.2 2 1
-github.com/kooinam/fabio/actors/event.go:21.45,22.9 1 1
-github.com/kooinam/fabio/actors/event.go:23.20,23.20 0 1
-github.com/kooinam/fabio/actors/event.go:24.10,25.30 1 0
-github.com/kooinam/fabio/actors/event.go:29.27,30.24 1 1
-github.com/kooinam/fabio/actors/event.go:30.24,34.3 2 1
-github.com/kooinam/fabio/actors/event.go:37.41,38.24 1 1
-github.com/kooinam/fabio/actors/event.go:38.24,42.3 2 1
-github.com/kooinam/fabio/actors/manager.go:19.33,22.12 2 1
-github.com/kooinam/fabio/actors/manager.go:22.12,23.7 1 1
-github.com/kooinam/fabio/actors/manager.go:23.7,25.4 1 1
-github.com/kooinam/fabio/actors/manager.go:30.75,36.12 4 1
-github.com/kooinam/fabio/actors/manager.go:40.2,40.14 1 1
-github.com/kooinam/fabio/actors/manager.go:36.12,38.3 1 1
-github.com/kooinam/fabio/actors/manager.go:44.103,49.2 3 1
-github.com/kooinam/fabio/actors/manager.go:52.112,61.21 7 1
-github.com/kooinam/fabio/actors/manager.go:65.2,65.12 1 1
-github.com/kooinam/fabio/actors/manager.go:61.21,63.3 1 1
-github.com/kooinam/fabio/actors/manager.go:68.34,71.49 2 1
-github.com/kooinam/fabio/actors/manager.go:71.49,73.3 1 1
-github.com/kooinam/fabio/actors/response.go:9.57,16.2 2 1
+github.com/kooinam/fab.io/actors/actions_handler.go:12.43,18.2 2 1
+github.com/kooinam/fab.io/actors/actions_handler.go:21.81,23.2 1 1
+github.com/kooinam/fab.io/actors/actions_handler.go:25.57,28.19 2 1
+github.com/kooinam/fab.io/actors/actions_handler.go:28.19,32.17 3 1
+github.com/kooinam/fab.io/actors/actions_handler.go:32.17,34.4 1 0
+github.com/kooinam/fab.io/actors/actions_handler.go:34.9,36.4 1 1
+github.com/kooinam/fab.io/actors/actions_handler.go:37.8,39.3 1 1
+github.com/kooinam/fab.io/actors/actor.go:15.52,27.2 4 1
+github.com/kooinam/fab.io/actors/actor.go:30.41,32.2 1 1
+github.com/kooinam/fab.io/actors/actor.go:34.29,35.12 1 1
+github.com/kooinam/fab.io/actors/actor.go:35.12,36.31 1 1
+github.com/kooinam/fab.io/actors/actor.go:36.31,38.4 1 1
+github.com/kooinam/fab.io/actors/context.go:16.45,22.2 2 1
+github.com/kooinam/fab.io/actors/context.go:25.54,28.18 2 0
+github.com/kooinam/fab.io/actors/context.go:32.2,32.33 1 0
+github.com/kooinam/fab.io/actors/context.go:28.18,30.3 1 0
+github.com/kooinam/fab.io/actors/context.go:36.56,40.2 2 0
+github.com/kooinam/fab.io/actors/context.go:43.65,46.18 2 0
+github.com/kooinam/fab.io/actors/context.go:50.2,50.22 1 0
+github.com/kooinam/fab.io/actors/context.go:63.2,63.20 1 0
+github.com/kooinam/fab.io/actors/context.go:46.18,48.3 1 0
+github.com/kooinam/fab.io/actors/context.go:51.14,54.17 2 0
+github.com/kooinam/fab.io/actors/context.go:58.3,58.11 1 0
+github.com/kooinam/fab.io/actors/context.go:59.15,60.30 1 0
+github.com/kooinam/fab.io/actors/context.go:54.17,56.4 1 0
+github.com/kooinam/fab.io/actors/event.go:10.93,18.2 2 1
+github.com/kooinam/fab.io/actors/event.go:21.45,22.9 1 1
+github.com/kooinam/fab.io/actors/event.go:23.20,23.20 0 1
+github.com/kooinam/fab.io/actors/event.go:24.10,25.30 1 0
+github.com/kooinam/fab.io/actors/event.go:29.27,30.24 1 1
+github.com/kooinam/fab.io/actors/event.go:30.24,34.3 2 1
+github.com/kooinam/fab.io/actors/event.go:37.41,38.24 1 1
+github.com/kooinam/fab.io/actors/event.go:38.24,42.3 2 1
+github.com/kooinam/fab.io/actors/manager.go:19.33,22.12 2 1
+github.com/kooinam/fab.io/actors/manager.go:22.12,23.7 1 1
+github.com/kooinam/fab.io/actors/manager.go:23.7,25.4 1 1
+github.com/kooinam/fab.io/actors/manager.go:30.75,36.12 4 1
+github.com/kooinam/fab.io/actors/manager.go:40.2,40.14 1 1
+github.com/kooinam/fab.io/actors/manager.go:36.12,38.3 1 1
+github.com/kooinam/fab.io/actors/manager.go:44.103,49.2 3 1
+github.com/kooinam/fab.io/actors/manager.go:52.112,61.21 7 1
+github.com/kooinam/fab.io/actors/manager.go:65.2,65.12 1 1
+github.com/kooinam/fab.io/actors/manager.go:61.21,63.3 1 1
+github.com/kooinam/fab.io/actors/manager.go:68.34,71.49 2 1
+github.com/kooinam/fab.io/actors/manager.go:71.49,73.3 1 1
+github.com/kooinam/fab.io/actors/response.go:9.57,16.2 2 1
