add unregister actor action

--- a/stats/index.html
+++ b/stats/index.html
@@ -39,7 +39,7 @@
                 {{.Identifier}}
               </td>
               <td>
-                {{.Root}}
+                {{.RootIdentifier}}
               </td>
               <td>
                 {{.Ch}}
